# wp-docker

./: .gitignore  .gitlab-ci.yml  Dockerfile  MANIFEST.in  README.md  composer.json  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: publish.yml
scripts/: install.py  update.sh
theme/: functions.php  header.php  index.php
theme/partials/: archive-post.php
wp-docker/: cli.py
wp-docker/templates/: Dockerfile
wp-docker/templates/theme-tailwind/: 404.php  footer.php  tailwind.config.js  webpack.config.js
wp-docker/templates/theme-tailwind/template-parts/: post-card.php
wp_docker/: cli.py  installer.py
wp_docker/templates/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose-dev.yml  docker-compose.yml  makefile  wp-config.php
wp_docker/templates/docker/nginx/: custom-rewrites.conf
wp_docker/templates/theme/: style.css
wp_docker/templates/theme-core/: archive.php  searchform.php  single.php  webpack.config.js
wp_docker/templates/theme-tailwind/: 404.php  archive.php  front-page.php  functions.php  index.php  package.json  page.php  single.php  style.css  tailwind.config.js  webpack.config.js
wp_docker_cli/: cli.py  installer.py
wp_docker_cli/templates/: .env.example  .gitlab-ci.yml  README.md  makefile
wp_docker_cli/templates/theme/: 404.php  footer.php  functions.php  package-lock.json  package.json  page.php  svg.php
wp_docker_cli/templates/theme-core/: front-page.php
wp_docker_cli/templates/theme-tailwind/: 404.php  front-page.php  functions.php  header.php  single.php  style.css  tailwind.config.js
(+11 files in other folders)
