[project]
name = "wp-docker"
version = "0.1.3"
description = "WordPress Docker Installer CLI tool with Docker setup and preconfigured theme"
authors = [{ name = "Jacek Labudda" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["wordpress", "docker", "installer", "cli", "wp"]
dependencies = ["python-dotenv>=1.0.0"]

[project.scripts]
wp-docker = "wp_docker.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["wp_docker"]
include = ["*"]

[tool.setuptools.package-data]
wp_docker = ["templates/**"]