[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wp-docker"
version = "0.1.4"
description = "WordPress Docker project generator"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jacek Labudda" }]
keywords = ["wordpress", "docker", "cli", "devops"]
dependencies = [
    "python-dotenv>=1.0.1",
]

[project.scripts]
wp-docker = "wp_docker.cli:main"

[tool.setuptools]
packages = ["wp_docker"]

[tool.setuptools.package-data]
wp_docker = ["templates/**/*"]